<resources>
    <string name="app_name">Deep Sea Calamari</string>
    <string name="name">teworcapt</string>
    <string name="options">Options</string>

    <!--Registration & Log-in Strings -->
    <string name="login">Log-in</string>
    <string name="sign_in">Sign-in</string>
    <string name="sign_up">Sign-up</string>
    <string name="regis">Registration</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="no_acct">New Account? Register here!</string>
    <string name="w_acct">Have an Account? Log-in here!</string>
    <string name="back_button">Back Button</string>
    <string name="log_out">Log Out</string>

    <!-- Game Screen UI -->
    <string name="settings">Settings</string>
    <string name="hunger">Hunger</string>
    <string name="hygiene">Hygiene</string>
    <string name="fun">Fun</string>
    <string name="Energy">Energy</string>

    <string name="feed">Feed</string>
    <string name="clean">Clean</string>
    <string name="play">Play</string>
    <string name="sleep">Sleep</string>

    <!-- Splash Screen -->
    <string name="desc">Colossal squids have tiny eggs. They\'re usually around 3 mm and float around in shallow water! </string>

    <!-- Cutscene -->
    <string name="intro_1"> Deep in the dark deep blue sea, the eggs of a magnificent kraken are scattered to the waters. </string>
    <string name="intro_2"> Hatchlings of the great kraken swim to different places and yet one is still trapped in its egg. </string>
    <string name="help_out"> Press to help it out! </string>
    <string name="tuto_1"> This is Calamari, help them become a big and strong kraken like their mother! </string>
    <string name="tuto_2"> Press on the buttons to fill up Calamari\'s needs! When you fill it up you can grow big and strong. </string>
    <string name="ready"> Click here to start. </string>

    <!-- Misc UI -->
    <string name="credits">Credits</string>
    <string name="sound_volume">Sound Volume</string>
    <string name="music_on">MUSIC ON</string>

    <!-- Credits -->
    <string name="Teworacpt">Teworcapt - Game Designer &amp; Dev</string>
    <string name="aisha">Aisha Villabona - Squid Art</string>
    <string name="fonts"> Open Sans &amp; Rosario - Fonts </string>
    <string name="music"> Lofiru - Music </string>

</resources>