<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".StartUpScreen">

    <RelativeLayout
        android:id="@+id/rootRL"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/darkerbackground"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/topTentacle"
            android:layout_width="400dp"
            android:layout_height="600dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="-210dp"
            android:layout_marginEnd="-100dp"
            android:rotation="-64"
            app:srcCompat="@drawable/toptentacle"
            tools:ignore="ContentDescription,VisualLintBounds" />

        <TextView
            android:id="@+id/intro_1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/rosario_font_variable"
            android:padding="20dp"
            android:text="@string/intro_1"
            android:textAlignment="center"
            android:textColor="@color/peach"
            android:textSize="19sp"
            android:textStyle="italic"
            android:visibility="invisible"
            tools:ignore="RelativeOverlap,TextContrastCheck,VisualLintOverlap" />

        <TextView
            android:id="@+id/intro_2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/intro_1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/rosario_font_variable"
            android:padding="20dp"
            android:text="@string/intro_2"
            android:textAlignment="center"
            android:textColor="@color/peach"
            android:textSize="19sp"
            android:textStyle="italic"
            android:visibility="invisible"
            tools:ignore="TextContrastCheck,VisualLintOverlap" />

        <ImageView
            android:id="@+id/squidEgg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/egg_2"
            android:layout_above="@id/help"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/peace_sans"
            android:text="@string/help_out"
            android:textColor="@color/peach"
            android:textSize="30sp"
            android:visibility="invisible"
            tools:ignore="TextContrastCheck,VisualLintOverlap" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>